package NYT.NProto;

import "yt/ytlib/ytree/attributes.proto";

////////////////////////////////////////////////////////////////////////////////

message TError
{
    required int32 code = 1;
    optional string message = 2;
    optional NYT.NYTree.NProto.TAttributes attributes = 3;
    repeated TError inner_errors = 4;
}

////////////////////////////////////////////////////////////////////////////////
